[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/Scences/Controls/Controls.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/8_bit_arcade/8-bit Arcade Out.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ExitLabel" type="Label" parent="."]
margin_left = 4.0
margin_top = -4.0
margin_right = 135.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )

[node name="ExiTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ExiTimer" to="." method="_on_ExiTimer_timeout"]
